# marketmood

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: marketmood_api_client2283.rst  modules.rst
src/marketmood_api_client2283/: __init__.py  marketmood_api_client2283.py
tests/: marketmood_api_client2283.py  test_marketmood_api_client2283.py
